--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-feather": "^2.0.10",
+    "react-flexible-star-rating": "^1.0.7",
     "react-router": "^7.10.0"
   },
   "devDependencies": {
